--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "Guillermo Brachetta",
     "email": "brachetta@me.com"
   },
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -43,6 +43,11 @@
         "label": "Amadeus Dark Cobalt",
         "uiTheme": "vs-dark",
         "path": "./themes/amadeus-dark-theme-cobalt.json"
+      },
+      {
+        "label": "Amadeus Dark Pastel",
+        "uiTheme": "vs-dark",
+        "path": "./themes/amadeus-dark-theme-pastel.json"
       }
     ]
   }
