--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "name": "Guillermo Brachetta",
         "email": "brachetta@me.com"
     },
-    "version": "0.0.9",
+    "version": "0.0.10",
     "engines": {
         "vscode": "^1.52.0"
     },
@@ -32,7 +32,8 @@
         "Amadeus Theme Dark",
         "Dark",
         "Graphite",
-        "Cobalt"
+        "Cobalt",
+        "Pastel"
     ],
     "contributes": {
         "themes": [
